--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "0.24.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.13.1",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
     "cloudinary": "^2.4.0",
